--- a/view/templates/generos especifico.html
+++ b/view/templates/generos especifico.html
@@ -110,10 +110,11 @@
     }
     
     .track-img {
-      max-width: 200px; /* La imagen no será más ancha que 400px */
-      max-height: 150px; /* La imagen no será más alta que 300px */
+      max-width: 100px; 
+      max-height: 100px; 
+      border-radius: 12px;
       width: auto;
-      height: auto; /* Elimina espacios extra abajo de la imagen */
+      height: auto; 
     }
     
     .track-title {
