--- a/view/templates/sellos.html
+++ b/view/templates/sellos.html
@@ -172,10 +172,12 @@
       color: inherit;
     }
     
-    .artista-number {
-      color: #777;
-      width: 30px;
-      text-align: center;
+    .artista-img {
+      max-width: 100px; 
+      max-height: 100px; 
+      border-radius: 12px;
+      width: auto;
+      height: auto; 
     }
     
     .artista-name {
