Añadido valoracion a canciones, generos y albumes Modificada pestaña de bestof

--- a/view/templates/album.html
+++ b/view/templates/album.html
@@ -168,6 +168,15 @@
       color: white;
       margin-top: 2rem;
     }
+    .album-rating {
+      margin-top: 1rem;
+    }
+    .album-rating .star {
+      font-size: 1.5rem;
+      color: var(--primary-color);
+      margin-right: 0.2rem;
+    }
+    
   </style>
 </head>
 <body>
@@ -204,6 +213,7 @@
         <h2 id="album-artist" class="album-artist"></h2>
         <span id="album-genre" class="album-genre"></span>
         <p id="album-description" class="album-description"></p>
+        <div id="album-rating" class="album-rating"></div>
       </div>
     </div>
 
