--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -75,68 +75,18 @@
     <div class="bestofs-songs">
       <h3>Mejores Canciones</h3>
       <div class="row">
-        <a href="/cancion?id=7" class="card">
-          <img src="static/images/karol-g.jpeg" alt="Tusa" class="card-img">
-          <div class="card-caption">Tusa</div>
-        </a>
-        <a href="/cancion?id=10" class="card">
-          <img src="static/images/ariana-grande.jpeg" alt="Positions" class="card-img">
-          <div class="card-caption">Positions</div>
-        </a>
-        <a href="/cancion?id=8" class="card">
-          <img src="static/images/david-guetta.jpeg" alt="Titanium" class="card-img">
-          <div class="card-caption">Titanium</div>
-        </a>
-        <a href="/cancion?id=9" class="card">
-          <img src="static/images/foo-fighters.jpg" alt="Everlong" class="card-img">
-          <div class="card-caption">Everlong</div>
-        </a>
       </div>
     </div>
-    
-    
     <!-- Mejores Álbumes -->
     <div class="album-section">
       <h3>Mejores Álbumes</h3>
-      <div class="row">
-        <a href="/album?id=5" class="card">
-          <img src="static/images/parachutes.jpg" alt="Parachutes" class="card-img">
-          <div class="card-caption">Parachutes</div>
-        </a>
-        <a href="/album?id=8" class="card">
-          <img src="static/images/18months.jpg" alt="18 Months" class="card-img">
-          <div class="card-caption">18 Months</div>
-        </a>
-        <a href="/album?id=11" class="card">
-          <img src="static/images/kg0516.jpeg" alt="KG0516" class="card-img">
-          <div class="card-caption">KG0516</div>
-        </a>
-        <a href="/album?id=9" class="card">
-          <img src="static/images/thecolourandtheshape.jpg" alt="The Colour and the Shape" class="card-img">
-          <div class="card-caption">The Colour and the Shape</div>
-        </a>
+      <div class="row"> 
       </div>
     </div>
-    
+    <!-- Mejores Generos -->
     <div class="genres-section">
       <h3>Mejores Géneros</h3>
       <div class="row">
-        <a href="/generos_especifico?id=reggaeton" class="card">
-          <img src="static/images/reggaeton.jpeg" alt="Reggaeton" class="card-img">
-          <div class="card-caption">Reggaeton</div>
-        </a>
-        <a href="/generos_especifico?id=techno" class="card">
-          <img src="static/images/techno.jpg" alt="Techno" class="card-img">
-          <div class="card-caption">Techno</div>
-        </a>
-        <a href="/generos_especifico?id=hiphop" class="card">
-          <img src="static/images/hip_hop.jpg" alt="Hip Hop" class="card-img">
-          <div class="card-caption">Hip Hop</div>
-        </a>
-        <a href="/generos_especifico?id=salsa" class="card">
-          <img src="static/images/salsa.jpg" alt="Salsa" class="card-img">
-          <div class="card-caption">Salsa</div>
-        </a>
       </div>
     </main>
     </section>
