Cambios estilos CSS

--- a/view/templates/checkout.html
+++ b/view/templates/checkout.html
@@ -46,7 +46,9 @@
       display: block;
       margin: 10px 0 5px;
     }
-    form input {
+    
+    #customer-form input, 
+    #payment-form input {
       width: 100%;
       padding: 10px;
       border: 1px solid #ddd;
@@ -76,14 +78,6 @@
     /* Ocultar secciones */
     .hidden {
       display: none;
-    }
-    /* Footer sencillo */
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #fff;
-      margin-top: 20px;
-      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
