--- a/view/templates/privacidad.html
+++ b/view/templates/privacidad.html
@@ -11,21 +11,8 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      background-color: #111;
-      color: #f1f1f1;
-    }
-
-    header {
-      background-color: #1e1e1e;
-      padding: 20px;
-      text-align: center;
-      border-bottom: 2px solid #333;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2em;
-      color: #00ff99;
+      background-color: #ffffff;
+      color: #111;
     }
 
     main {
@@ -45,7 +32,7 @@
     }
 
     a {
-      color: #00ffaa;
+      color: #ffffff;
       text-decoration: none;
     }
 
@@ -53,13 +40,6 @@
       text-decoration: underline;
     }
 
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #1e1e1e;
-      border-top: 2px solid #333;
-      font-size: 0.9em;
-    }
   </style>
 </head>
 <body>
