--- a/view/templates/checkout.html
+++ b/view/templates/checkout.html
@@ -55,17 +55,17 @@
       border-radius: 4px;
     }
     /* Botones */
-    button {
+    .btn-remove {
       padding: 10px 20px;
       border: none;
       border-radius: 4px;
-      background: #3498db;
+      background:rgb(194, 23, 23);
       color: #fff;
       cursor: pointer;
       margin-top: 20px;
     }
-    button:hover {
-      background: #2980b9;
+    .btn-remove:hover {
+      background:rgb(255, 0, 0);
     }
     /* Flecha de navegación */
     .nav-arrow {
