--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -36,7 +36,7 @@
     
     <!-- Si el usuario ha iniciado sesión, se muestra el perfil -->
     <div class="profile-container" id="profileContainer">
-      <img src="/static/images/profile.png" alt="Perfil" class="profile-icon" id="profileIcon" />
+      <img src="{{ user.profilePic }}" alt="Perfil" class="profile-icon" id="profileIcon" />
 
       <div class="profile-dropdown" id="profileDropdown">
       
