login para la tienda

--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -59,4 +59,14 @@
     {% endif %}
 
   </div>
+
+<!--
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      updateCartCount();
+      updateCartDropdown();
+    });
+  </script>
+  <script src="/static/js/app.js"></script>-->
+  
 </header>
