--- a/view/templates/artistas.html
+++ b/view/templates/artistas.html
@@ -98,6 +98,12 @@
       <h1 id="artist-name" class="artist-name"></h1>
       <p id="artist-genre" class="artist-genre"></p>
       <p id="artist-description" class="artist-description"></p>
+    </div>
+
+      <section style="margin-bottom: 50px;">
+        <h2 style="text-align: center;">Canciones de este artista</h2>
+        <div id="songs-container" class="songs-container"></div>
+      </section>
     
   </main>
 
@@ -127,7 +133,8 @@
 
 
   <div id="data-artistas"
-       data-artistas='{{ artistas | tojson }}'>
+       data-artistas='{{ artistas | tojson }}'
+       data-canciones='{{ canciones | tojson }}'>
   </div>
   <script src="/static/js/artistas.js"></script>
   <!--
